RESOLVED FIXED165271
Renamed EvalCodeCache => DirectEvalCodeCache
https://bugs.webkit.org/show_bug.cgi?id=165271
Summary Renamed EvalCodeCache => DirectEvalCodeCache
Geoffrey Garen
Reported 2016-12-01 13:44:10 PST
Renamed EvalCodeCache => DirectEvalCodeCache
Attachments
Patch (21.07 KB, patch)
2016-12-01 13:45 PST, Geoffrey Garen
saam: review+
Geoffrey Garen
Comment 1 2016-12-01 13:45:09 PST
WebKit Commit Bot
Comment 2 2016-12-01 13:46:48 PST
Attachment 295886 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/DirectEvalCodeCache.h:38: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2016-12-01 13:47:55 PST
Note You need to log in before you can comment on or make changes to this bug.